Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3134

Admission controller should not assume all backends have same proc mem limit

    XMLWordPrintableJSON

Details

    Description

      The admission policy now checks that all backends have enough available memory resources to execute the request, but it assumes that all backends share the same process mem limit as the impalad it itself is running on. In a heterogeneous environment, admission is wrong.

      Attachments

        Activity

          People

            bikramjeet.vig Bikramjeet Vig
            mjacobs Matthew Jacobs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: